@@ -15,6 +15,10 @@ Change log
     - Added support for specifying a minimizeChordDistance attribute per chordPattern tag in the PatternHarmonyEngine. This attribute
       allows you to override the global minimizeChordDistance value if you set it.
 
+    - Added "retriggerPitches" tag to the PadSequenceEngine. If set to true, all chord pitches will be retriggered on every chord
+      change. If set to false, only the chord pitches that are not included in the previous chord are triggered, the other ones
+      are kept active. Defaults to true, because this was the behavior of version 0.3 and before.
+
     - Corrected the legato fix from the previous release, which lead to the note being immediately cut off if the legato flag was
       used with the same pitch (e.g., "0~/4,0/4"). This situation is now treated as if the legato flag were off.
 
